Modify Create Group in dd and bug fix in Navbbar section

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DK+Loopet:wght@100..400&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
 
 @theme {
   --color-mint-500: oklch(0.72 0.11 178);
+  --font-playwrite : "Playwrite DK Loopet", cursive;
 }
 
 :root {
